docs: add src by img teg in html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img scr="https://avavatar.ru/images/avatars/3/avatar_jyIKh99P4QkgFJeI.jpg" alt="Моя аватарка">
+<img src="https://avavatar.ru/images/avatars/3/avatar_jyIKh99P4QkgFJeI.jpg" alt="Моя аватарка">
